fixed a white gap when scrolling down the page

--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -14,8 +14,8 @@
 }
 
 :root {
-    --navbar-bg: rgba(0, 0, 0, 0.75);
-    --navbar-bg-scrolled: rgba(0, 0, 0, 0.8);
+    --navbar-bg: rgba(0, 0, 0, 0.8);
+    --navbar-bg-scrolled: rgba(0, 0, 0, 0.3);
     --navbar-text: #e5ffff;
     --hover-color: rgba(255, 255, 255, .9);
     --font-size: 22px;
