--- a/src/css/Overview.css
+++ b/src/css/Overview.css
@@ -12,7 +12,7 @@
 }
 
 .main-content{
-    margin-top: 6rem;
+    padding-top: 7rem;
 }
 
 .title{
